[iOS][WK2] Regression: ScrollView's scroll offset is never set after r164702 https://bugs.webkit.org/show_bug.cgi?id=129620

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-03-03
Reviewed by Simon Fraser.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::updateVisibleContentRects):


Canonical link: https://commits.webkit.org/147673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165003 268f45cc-cd09-0410-ab3c-d52691b4dbfc